--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </header>
     <section class="card">
       <div class="card-one">
-        <h1 class="card-one-bill">Bill</h1>
+        <div class="card-one-bill">
+          <h1 class="card-one-bill-title">Bill</h1><p class="zero-bill"></p>
+        </div>
         <input class="card-one-bill-input" type="text" placeholder="0">
         <h2 class="card-one-tip">Select Tip %</h2>
         <div class="grid">
@@ -29,7 +31,7 @@
           <input  class="grid-custom" type="text" name="" id="bill" placeholder="Custom">
         </div>
         <div class="card-one-people">
-          <h2 class="card-one-people-title">Number of People</h2><p class="zero"></p>
+          <h2 class="card-one-people-title">Number of People</h2><p class="zero-people"></p>
         </div>
         <input class="card-one-people-input" type="text" name="" id="" placeholder="0">
       </div>
